--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.5",
     "recoil": "^0.7.7",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
